--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,69 @@
 
 
 }
+#header{
+    background-image: url('../img/hero.png');
+    background-repeat: no-repeat;
+    background-size: 85vw;
+}
+#header .navbar .navbar-collapse ul li a{
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #FFFFFF;
+padding-right: 45px;
+
+
+}
+#header .container-fluid{
+padding: 0 3rem;
+}
+#header #hero .col-md-8>div p{
+    font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+text-transform: uppercase;
+color: #FFFFFF;
+
+}
+#header #hero .col-md-8 h1{
+    font-style: normal;
+font-weight: 700;
+font-size: 90px;
+line-height: 135px;
+color: #FFFFFF;
+
+}
+#header #hero .col-md-8>div h2{
+    font-style: normal;
+font-weight: 400;
+font-size: 48px;
+line-height: 72px;
+color: #FFFFFF;
+    
+}
+#header #hero .col-md-4>div{
+    background: #616161;
+    border-radius: 27px;
+    
+}
+#header #hero .col-md-4>div h3{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 63px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+}
+#header #hero .col-md-4>div p{
+    font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #FFFFFF;
+text-align: center;
+}
+
