--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -6,55 +6,76 @@
 
 
 }
-#header{
+
+#header {
     background-image: url('../img/hero.png');
     background-repeat: no-repeat;
     background-size: 85vw;
 }
-#header .navbar .navbar-collapse ul li a{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-color: #FFFFFF;
-padding-right: 45px;
 
-
-}
-#header .container-fluid{
-padding: 0 3rem;
-}
-#header #hero .col-md-8>div p{
+#header .navbar .navbar-collapse ul li a {
     font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 36px;
-text-transform: uppercase;
-color: #FFFFFF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    padding-right: 45px;
+
 
 }
-#header #hero .col-md-8 h1{
+
+#header .container-fluid {
+    padding: 0 3rem;
+}
+
+#header #hero .col-md-8>div p {
     font-style: normal;
-font-weight: 700;
-font-size: 90px;
-line-height: 135px;
-color: #FFFFFF;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin: 0;
+
 
 }
-#header #hero .col-md-8>div h2{
+
+#header #hero .col-md-8 h1 {
     font-style: normal;
-font-weight: 400;
-font-size: 48px;
-line-height: 72px;
-color: #FFFFFF;
-    
+    font-weight: 700;
+    font-size: 90px;
+    line-height: 135px;
+    color: #FFFFFF;
+    margin: 0;
+
+
 }
-#header #hero .col-md-4>div{
+
+#header #hero .col-md-8>div h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 72px;
+    color: #FFFFFF;
+    margin: 0;
+
+
+}
+
+#header #hero .col-md-8>div {
+    margin-top: 13rem;
+    margin-bottom: 7rem;
+}
+
+#header #hero .col-md-4>div {
     background: #616161;
     border-radius: 27px;
-    
+    padding: 10px 25px;
+    width: 85%;
+
 }
-#header #hero .col-md-4>div h3{
+
+#header #hero .col-md-4>div h3 {
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
@@ -63,12 +84,335 @@ color: #FFFFFF;
     color: #FFFFFF;
     text-align: center;
 }
-#header #hero .col-md-4>div p{
+
+#header #hero .col-md-4>div p {
     font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-color: #FFFFFF;
-text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    text-align: center;
 }
 
+#header #hero .col-md-4>div label {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    padding: 15px 0;
+
+
+}
+
+#header #hero .col-md-4>div input {
+    border-bottom: 3px solid #FFFFFF;
+    width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+
+
+}
+
+#header #hero .col-md-4>div select {
+    border-bottom: 3px solid #FFFFFF;
+    width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: none;
+}
+
+#header #hero .col-md-4>div input[type=submit] {
+    background: #C4C4C4;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #616161;
+    border: none;
+    margin: 35px 0;
+    padding: 15px;
+}
+
+#collective .container {
+    max-width: 1000px;
+}
+
+#collective {
+    padding: 100px 0;
+}
+
+#collective h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 58px;
+    color: #494949;
+
+}
+
+#collective p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 266%;
+    color: #000000;
+}
+
+#Energized {}
+
+#Energized h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 55px;
+    color: #494949;
+}
+
+#Energized p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: #303030;
+
+
+}
+
+#Energized p:last-child {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 266%;
+    color: #000000;
+    text-transform: lowercase;
+
+}
+
+#Broadcast {
+    background-image: url('../img/broadcast.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 100px 0;
+    margin: 100px 0 0 0;
+}
+
+#Broadcast h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 153%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+#Broadcast h4 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 153%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+
+}
+
+#Broadcast p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 266%;
+    text-align: center;
+    color: #FFFFFF;
+
+}
+
+#Masters {
+    padding: 100px 0;
+}
+
+#Masters p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 257%;
+    text-align: center;
+    color: #000000;
+
+}
+
+#Masters h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 55px;
+    text-align: center;
+    color: #494949;
+    padding: 0 8rem;
+
+}
+
+#Masters h5 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 257%;
+    text-align: center;
+    color: #000000;
+
+}
+
+#Masters .col-md-3>div{
+    text-align: center;
+}
+#universal{
+padding: 100px 0;
+background-image: url('../img/card universal.png');
+background-repeat: no-repeat;
+background-size: contain;
+background-position: center center;
+margin-bottom: 100px;
+
+}
+#universal h6{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 54px;
+    text-align: center;
+    color: #FFFFFF;
+}
+#universal h2{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 136px;
+    line-height: 204px;
+    text-transform: uppercase;
+    color: #434544;
+    text-align: center;
+
+}
+#universal p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 38%;
+    margin: auto;
+    
+}
+#setting{
+padding: 100px 0;
+}
+
+#setting h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 55px;
+    color: #494949;
+    
+}
+#setting p{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: #303030;
+}
+#setting p.font16{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 264%;
+    color: #000000;
+    text-transform: capitalize;
+}
+#setting button{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+    background: #828282;
+    padding: 15px 45px;
+    
+}
+#setting .col-md-6 img{
+    margin-top: 4rem;
+}
+#Radiators{
+background-image: url('../img/broadcast.png');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+padding: 100px 0;
+margin: 100px 0;
+
+}
+#Radiators h5{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 153%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+
+}
+#Radiators h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 153%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF; 
+}
+#Radiators p{
+    font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 266%;
+text-align: center;
+color: #FFFFFF;
+
+}
+#Days .chants h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 72px;
+    text-transform: uppercase;
+    color: #434544;
+    text-align: center;
+    
+}
+#Days .chants h5{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #303030; 
+    text-align: center;
+}
+#Days .chants p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 266%;
+    text-align: center;
+    color: #000000;
+}
+#Days .clock{
+    border-bottom: 1px solid #454545;
+}
